# reprorusted-python-cli

./: .gitignore  .pmat-gates.toml  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DEBUGGING.md  EXAMPLES_INDEX.md  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  Makefile  NEW_EXAMPLES.md  README.md  STATUS.md  STRESS_TEST_RESULTS.md  collect_errors.sh  pmat-quality.toml  pmat.toml  pyproject.toml  renacer.toml  roadmap.yaml  test_all_compile.sh  test_all_compile_cargo.sh  test_compile_proper.sh
.github/workflows/: benchmarks.yml  ci.yml  corpus-validation.yml  quality-gates.yml
.pmat/work/: GH-10.yaml  GH-11.yaml  GH-12.yaml  GH-13.yaml  GH-14.yaml  GH-15.yaml  GH-16.yaml  GH-17.yaml  GH-18.yaml  GH-19.yaml  GH-20.yaml  GH-21.yaml  GH-22.yaml  GH-23.yaml  GH-24.yaml  GH-25.yaml  GH-6.yaml  GH-7.yaml  GH-8.yaml  GH-9.yaml
benchmarks/: REGRESSION_DETECTION.md  timing_results.csv
benchmarks/baseline/: example_complex-bench.json  example_flags-bench.json  example_positional-bench.json  example_simple-bench.json  example_stdlib-bench.json  example_subcommands-bench.json
benchmarks/framework/: bench_all.sh  bench_docker.sh  bench_runner.sh  generate_report.py  regression_check.py  visualize.py  visualize_png.py
benchmarks/reports/: summary.txt  timing.csv
data/: README.md  augmented_corpus.parquet  ci_baseline.json  corpus_insights.json  corpus_stats.json  depyler_citl_corpus.parquet  depyler_citl_corpus_v2.parquet  golden_traces.json  labeled_corpus.parquet  progress_history.jsonl
data/hitl_reviews/: 2025-Q4-sample.json
docker/example_simple/: Dockerfile.python  Dockerfile.rust
docs/: ci-cd.md  corpus-driven-development-success.md  corpus-extraction.md  corpus-improvement-analysis.md  data-quality-report-qa-checklist.md  dataset-publication-qa-checklist.md  hitl-review-guide.md  integration-report-golden-trace.md  makefile-generation.md  quality-review-implementation.md  rust-io-tests.md
docs/examples/: tutorial.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: argparse-depyler-compile-examples-spec.md  corpus-quality-review.md  generator-pipelines-data-processing-csv-cli-tools-examples.md  module-mapping-spec.md  numpy-to-trueno-conversion.md  pytorch-sklearn-conversion.md
examples/: Cargo.toml  test_with_open.py  test_with_open.rs
examples/example_abs/: abs_tool.py
examples/example_age_calculator/: Makefile  age_cli.py
examples/example_any_all/: any_all_tool.py
examples/example_argparse_minimal/: Makefile  minimal_cli.py
examples/example_array/: array_tool.py
examples/example_ascii/: ascii_tool.py
examples/example_async_basic/: Makefile  async_basic_cli.py
examples/example_async_context/: Makefile  async_context_cli.py
examples/example_async_gather/: Makefile  async_gather_cli.py
examples/example_async_iterator/: Makefile  async_iterator_cli.py
golden_traces/: ANALYSIS.md  FINAL-SUMMARY.md  MULTI-EXAMPLE-SUMMARY.md  QUICKSTART.md  README.md  VALIDATION-REPORT.md  trivial_cli_rust.json  trivial_cli_rust_source.json  trivial_cli_rust_summary.txt
reports/: baseline.json  quality_report.json  zero_success_analysis.json
scripts/: analyze_rust_errors.sh  augment_corpus.py  bench_all_bashrs.sh  capture_golden_traces.sh  category_diff.py  check_io_equivalence.sh  check_test_lib_crates.py  ci_runner.sh  clippy_gate.py  corpus_dashboard.sh  corpus_diff.sh  corpus_quality_report.py  export_hf_corpus.py  generate_golden_summary.sh  generate_insights.py  generate_makefiles.sh  generate_recommendations.sh  golden_traces_analyzer.py  hitl_sampler.py  install_hooks.sh  label_corpus.py  measure_compile_rate.py  parallel_compile_status.sh  progress_tracker.sh  retranspile_corpus.py  setup_dev_env.sh  synthetic_augmenter.py  test_clippy_gate.py  test_golden_traces.py  test_hitl_sampler.py  update_compile_status.sh  validate_examples.sh  verify_rust_compilation.sh  weak_supervision.py  zero_success_analyzer.py
tests/: test_analyze_rust_errors.sh  test_augment_corpus.py  test_category_diff.py  test_ci_runner.sh  test_corpus_quality_report.py  test_dashboard.sh  test_io_equivalence.rs  test_label_corpus.py  test_progress_tracker.sh  test_recommendations.sh  test_synthetic_augmenter.py  test_verify_rust.sh  test_weak_supervision.py  test_zero_success_analyzer.py
(+552 files in other folders)
