[project]
name = "reprorusted-python-cli"
version = "1.0.0"
description = "Argparse-to-Rust compilation validation examples using depyler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "PAIML", email = "info@paiml.com" }
]
keywords = ["python", "rust", "transpiler", "argparse", "cli", "depyler", "benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",  # Parallel test execution
    "ruff>=0.1.0",           # Linting and formatting
    "pyyaml>=6.0",           # For test case definitions
    "psutil>=5.9.0",         # Memory measurement
]

[project.optional-dependencies]
benchmark = [
    "matplotlib>=3.7.0",     # Visualization
    "numpy>=1.24.0",         # Statistical analysis
    "pandas>=2.0.0",         # Data processing
]

dev = [
    "ipython>=8.14.0",       # Interactive development
    "black>=23.7.0",         # Code formatting (alternative)
]

[project.urls]
Homepage = "https://github.com/paiml/reprorusted-python-cli"
Repository = "https://github.com/paiml/reprorusted-python-cli"
Documentation = "https://github.com/paiml/reprorusted-python-cli/tree/main/docs"
"Bug Tracker" = "https://github.com/paiml/reprorusted-python-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.uv]
dev-dependencies = []
